更改头像图片

--- a/view/static/css/chat.css
+++ b/view/static/css/chat.css
@@ -57,7 +57,7 @@
 }
 #user_face_icon {
     display: inline-block;
-    background: red;
+    /* background: red; */
     width: 60px;
     height: 60px;
     border-radius: 30px;
