--- a/view/templates/chat.html
+++ b/view/templates/chat.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../static/css/chat.css">
     <!-- <script src="../static/js/chat.js"></script> -->
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <script>
         window.onload = function(){
             const USER = 0;
@@ -70,6 +71,23 @@
                     role = 0;
                 }                
             }
+
+            var socket = io.connect('http://' + "127.0.0.1:5500" );
+            var sid;
+            socket.on('connect', function() {
+                console.log("connected!");
+                socket.emit('session_request', {});
+            });
+            socket.on('session_confirm', function(data) {
+                console.log('fjh xueba');
+                console.log(data);
+                sid = data;
+            });
+
+            socket.on('bot_uttered', function(data) {
+                console.log(data);
+            })
+
             btn.onclick = function(){
                 role = USER;
                 if(text.value ==''){
@@ -77,11 +95,12 @@
                 }else {
                     showMsg(text.value);
                     // post('/', {words: text.value});
-                    $.post('/get_response', {words: text.value}, function(result) {
-                        result = jQuery.parseJSON(result);
-                        role = result.role;
-                        showMsg(result.content);
-                    });
+                    // $.post('/get_response', {words: text.value}, function(result) {
+                    //     result = jQuery.parseJSON(result);
+                    //     role = result.role;
+                    //     showMsg(result.content);
+                    // });
+                    socket.emit('user_uttered', {message: text.value, session_id: sid});
                     text.value = '';
                     // 内容过多时,将滚动条放置到最底端
                     content.scrollTop=content.scrollHeight;  
@@ -89,6 +108,8 @@
             }
             role = {{ data|safe }}.role;
             showMsg({{ data|safe }}.content);
+
+            
         }
     </script>
     <title>Document</title>
@@ -114,5 +135,23 @@
             
         </div>
     </div>
+
+    <!-- <div id="webchat">
+        <script src="https://storage.googleapis.com/mrbot-cdn/webchat-latest.js"></script>        
+        <script>            
+            WebChat.default.init({                
+                selector: "#webchat",                
+                initPayload: "/get_started",                
+                interval: 1000, // 1000 ms between each message                
+                customData: {"sender": "django"}, // arbitrary custom data. Stay minimal as this will be added to the socket                
+                socketUrl: "http://localhost:5500/",                
+                title: "Connect",                
+                subtitle: "The bot which connects people",                
+                profileAvatar: "https://rasa.com/assets/img/demo/rasa_avatar.png",                
+                showCloseButton: true,                
+                fullScreenMode: false            
+                })        
+        </script>    
+    </div> -->
 </body>
 </html>
